cluster/apps/networking/ldap-user-manager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-user-manager
  namespace: networking
spec:
  type: ClusterIP
  selector:
    app: ldap-user-manager
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
